--- a/app/src/main/res/menu/device_settings.xml
+++ b/app/src/main/res/menu/device_settings.xml
@@ -11,7 +11,7 @@
 
     <item
         android:id="@+id/share_device_id"
-        android:icon="@drawable/activity_share"
+        android:icon="@drawable/baseline_share_24"
         android:title="@string/share_device_id"
         app:showAsAction="ifRoom" />
 
