--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -36,8 +36,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    app:drawableLeftCompat="@drawable/ic_id_grey"
-                    app:drawableStartCompat="@drawable/ic_id_grey"
+                    app:drawableLeftCompat="@drawable/ic_id"
+                    app:drawableStartCompat="@drawable/ic_id"
                     android:contentDescription="@string/device_id"
                     android:imeOptions="actionNext"
                     android:inputType="textNoSuggestions|textMultiLine"
@@ -96,8 +96,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    app:drawableLeftCompat="@drawable/ic_id_grey"
-                    app:drawableStartCompat="@drawable/ic_id_grey"
+                    app:drawableLeftCompat="@drawable/ic_id"
+                    app:drawableStartCompat="@drawable/ic_id"
                     android:hint="@string/device_id"
                     android:imeOptions="actionNext"
                     android:inputType="textNoSuggestions|textMultiLine" />
