--- a/app/src/main/res/layout/activity_folder.xml
+++ b/app/src/main/res/layout/activity_folder.xml
@@ -39,8 +39,8 @@
                 style="@style/Widget.Syncthing.TextView.Label.Details.Field"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:drawableLeftCompat="@drawable/ic_id_grey"
-                app:drawableStartCompat="@drawable/ic_id_grey"
+                app:drawableLeftCompat="@drawable/ic_id"
+                app:drawableStartCompat="@drawable/ic_id"
                 android:hint="@string/folder_id"
                 android:imeOptions="actionDone"
                 android:inputType="textCapWords"
