--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -218,8 +218,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:checked="false"
-                    app:drawableLeftCompat="@drawable/baseline_lock_24"
-                    app:drawableStartCompat="@drawable/baseline_lock_24"
+                    app:drawableLeftCompat="@drawable/filled_lock_24"
+                    app:drawableStartCompat="@drawable/filled_lock_24"
                     android:text="@string/untrusted_device" />
 
                     <TextView
