--- a/app/src/main/res/xml/app_settings.xml
+++ b/app/src/main/res/xml/app_settings.xml
@@ -15,6 +15,14 @@
 
         <!-- Sync on WiFi -->
         <CheckBoxPreference
+            android:key="run_only_on_vpn"
+            android:title="@string/run_only_on_vpn_title"
+            android:summary="@string/run_only_on_vpn_summary"
+            android:singleLineTitle="false"
+            android:defaultValue="false" />
+
+        <!-- Sync on WiFi -->
+        <CheckBoxPreference
             android:key="run_on_wifi"
             android:title="@string/run_on_wifi_title"
             android:summary="@string/run_on_wifi_summary"
