--- a/app/src/main/res/xml/app_settings.xml
+++ b/app/src/main/res/xml/app_settings.xml
@@ -287,7 +287,7 @@
         <EditTextPreference
             android:key="backupFolderName"
             android:title="@string/backup_folder_name"
-            android:persistent="false"
+            android:persistent="true"
             android:defaultValue="syncthing"
             android:inputType="textNoSuggestions" />
 
