--- a/app/src/main/res/xml/app_settings.xml
+++ b/app/src/main/res/xml/app_settings.xml
@@ -287,6 +287,7 @@
         <EditTextPreference
             android:key="backup_folder_name"
             android:title="@string/backup_folder_name"
+            android:summary="@null"
             android:persistent="true"
             android:defaultValue="syncthing"
             android:inputType="textNoSuggestions" />
