--- a/app/src/main/res/xml/locales_config.xml
+++ b/app/src/main/res/xml/locales_config.xml
@@ -1,44 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <locale-config xmlns:android="http://schemas.android.com/apk/res/android">
-    <locale android:name="en-US" />
+    <locale android:name="en-GB" />
     <locale android:name="ar" />
     <locale android:name="bg" />
-    <locale android:name="bn-IN" />
-    <locale android:name="ca" />
+    <locale android:name="ca-rES" />
     <locale android:name="cs" />
-    <locale android:name="da-DK" />
+    <locale android:name="da" />
     <locale android:name="de" />
     <locale android:name="el" />
     <locale android:name="es" />
+    <locale android:name="es-rMX" />
     <locale android:name="eu" />
-    <locale android:name="fa-IR" />
     <locale android:name="fi" />
     <locale android:name="fr" />
-    <locale android:name="gl" />
-    <locale android:name="hi-IN" />
-    <locale android:name="hr" />
     <locale android:name="hu" />
-    <locale android:name="id" />
+    <locale android:name="in" />
     <locale android:name="it" />
-    <locale android:name="iw" />
     <locale android:name="ja" />
     <locale android:name="ko" />
-    <locale android:name="ml" />
-    <locale android:name="nb-NO" />
+    <locale android:name="nb" />
     <locale android:name="nl" />
+    <locale android:name="nn" />
     <locale android:name="pl" />
     <locale android:name="pt" />
-    <locale android:name="pt-BR" />
-    <locale android:name="ro-RO" />
+    <locale android:name="pt-rBR" />
+    <locale android:name="ro" />
     <locale android:name="ru" />
     <locale android:name="sk" />
-    <locale android:name="sq-AL" />
-    <locale android:name="sr" />
     <locale android:name="sv" />
-    <locale android:name="szl" />
-    <locale android:name="tr-TR" />
+    <locale android:name="ta" />
+    <locale android:name="tr" />
     <locale android:name="uk" />
     <locale android:name="vi" />
-    <locale android:name="zh-CN" />
-    <locale android:name="zh-TW" />
+    <locale android:name="zh-rCN" />
+    <locale android:name="zh-rTW" />
 </locale-config>
